[package]
edition = "2021"
name = "datalayer-driver"
version = "0.1.0"
license = "MIT"
authors = ["yakuhito <y@kuhi.to>"]
homepage = "https://github.com/Datalayer-Storage/DataLayer-Driver"
repository = "https://github.com/Datalayer-Storage/DataLayer-Driver"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"

chia = "0.9.0"
hex-literal = "0.4.1"
chia-protocol = "0.9.0"
chia-puzzles = "0.9.0"
clvm-traits = "0.9.0"
clvm-utils = "0.9.0"
clvm-derive = "0.9.0"
clvmr = "0.7.0"
chia-sdk-driver = "0.11.0"
chia-sdk-test = "0.11.0"
chia-sdk-parser = "0.11.0"
chia-sdk-types = "0.11.0"
tokio = "1.38.0"
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
hex = "0.4.3"
sha2 = "0.10.8"
rstest = "0.21.0"
num-bigint = "0.4.5"
thiserror = "1.0.61"
chia-wallet-sdk = "0.11.0"
bech32 = "0.9.1"
native-tls = "0.2.12"
bip39 = "2.0.0"
chia-bls = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
once_cell = "1.19.0"
ctor = "0.2.8"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
