[package]
edition = "2021"
name = "datalayer-driver"
version = "0.1.0"
license = "MIT"
authors = ["yakuhito <y@kuhi.to>"]
homepage = "https://github.com/Datalayer-Storage/DataLayer-Driver"
repository = "https://github.com/Datalayer-Storage/DataLayer-Driver"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"

chia = "0.12.0"
hex = "0.4.3"
thiserror = "1.0.61"
native-tls = "0.2.12"
bip39 = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
bech32 = "0.9.1"
clvmr = "0.8.0"

chia-wallet-sdk = { git = "https://github.com/Rigidity/chia-wallet-sdk.git", rev = "0ca0005a0e34468be2155a2ee665b092b7dc19c3", features = ["chip-0035"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
