[package]
edition = "2021"
name = "datalayer-driver"
version = "0.1.0"
license = "MIT"
authors = ["yakuhito <y@kuhi.to>"]
homepage = "https://github.com/DIG-Network/DataLayer-Driver"
repository = "https://github.com/DIG-Network/DataLayer-Driver"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"

chia = "0.17.0"
thiserror = "1.0.61"
clvmr = "0.10.0"
tokio = "1.39.3"
chia-wallet-sdk = { version = "0.20.0", features = ["chip-0035", "native-tls"] }
hex-literal = "0.4.1"
num-bigint = "0.4.6"
hex = "0.4.3"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
